--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,7 +1,95 @@
 ﻿
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "NSCalendarAPI";
 }
 
-<h2>Index</h2>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js"></script>
+
+
+
+<div id="divCorpo">
+
+<div style="padding-left: 15%; padding-right: 15%;">
+  <div style="min-width: 300px;" >
+         <div class="card" >
+           <div class="card-header">
+                         <div class="row">
+                        <div class="col-lg-12">
+                         <h3 class="card-title">Bem Vindo a NSCalendarAPI</h3>
+                        </div>
+                    </div>
+                         <div class="row">
+                        <div class="col-lg-12">
+                         <p>API para o Aplicativo NSCalendar</p>
+                        </div>
+                    </div>
+           </div>
+             <div class="card-body" style="background-color:fb0010;color:white;">
+                    <div class="row">
+                       
+                        <div class="col-lg-6">
+                            <div class="row">
+                                <div class="col-lg-12">
+                                     <h3>Baixe no seu dispositivo IOS</h3> 
+                                    <div id='ibb-widget-root-1299840412'></div>
+                                    <script>(function (t, e, i, d) { var o = t.getElementById(i), n = t.createElement(e); o.style.height = 250; o.style.width = 300; o.style.display = 'inline-block'; n.id = 'ibb-widget', n.setAttribute('src', ('https:' === t.location.protocol ? 'https://' : 'http://') + d), n.setAttribute('width', '300'), n.setAttribute('height', '250'), n.setAttribute('frameborder', '0'), n.setAttribute('scrolling', 'no'), o.appendChild(n) })(document, 'iframe', 'ibb-widget-root-1299840412', "banners.itunes.apple.com/banner.html?partnerId=&aId=&bt=catalog&t=catalog_black&id=1299840412&c=br&l=pt-BR&w=300&h=250&store=apps");</script>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-12">
+                                     <h3>Documentação da API</h3> 
+                                    <a href="/swagger">
+                                        <img src="https://raw.githubusercontent.com/TBertuzzi/Resources/master/Logos/Swaggerwhite.png" style="max-width:300px;" alt="Swagger">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <h3>Códigos e exemplos</h3>
+                                    <a href="https://twitter.com/tbertuzzi">
+                                        <img src="https://raw.githubusercontent.com/TBertuzzi/Resources/master/Logos/github.png" style="max-width:300px;" alt="Swagger">
+                                    </a>
+                                </div>
+                            </div>
+
+                        </div>
+                         <div class="col-lg-6">
+                            <div id="divCarousel" class="carousel slide" data-ride="carousel">
+
+                              <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                  <img src="http://is4.mzstatic.com/image/thumb/Purple128/v4/1e/c9/fe/1ec9fe61-db49-69c9-45c7-8931f02dc997/source/392x696bb.jpg" alt="Tela Inicial">
+                                </div>
+                                <div class="carousel-item">
+                                  <img src="http://is5.mzstatic.com/image/thumb/Purple128/v4/07/aa/04/07aa041d-338b-d5b4-96bc-179816df4c3f/source/392x696bb.jpg" alt="Jogos do Mes">
+                                </div>
+                                <div class="carousel-item">
+                                  <img src="http://is5.mzstatic.com/image/thumb/Purple128/v4/13/40/5c/13405c42-1daf-19d1-945e-6b98852b09eb/source/392x696bb.jpg" alt="Detalhes de Jogos">
+                                </div>
+                                <div class="carousel-item">
+                                  <img src="http://is4.mzstatic.com/image/thumb/Purple128/v4/94/92/5c/94925c40-7b79-3324-c7f9-bc4b8d0b75c5/source/392x696bb.jpg" alt="Busca de Jogos">
+                                </div>
+                                 <div class="carousel-item">
+                                  <img src="http://is4.mzstatic.com/image/thumb/Purple128/v4/f1/2f/87/f12f8764-8243-042e-c01c-b7bf05be4be6/source/392x696bb.jpg" alt="Notificações">
+                                </div>
+                              </div>
+
+                            </div>
+                         </div>
+                        
+                        
+                    </div>
+             </div>
+                <div class="card-footer">
+                </div>
+         </div>
+
+        </div>
+  </div>
+    
+</div>
+
 
